<resources>
    <string name="app_name">SyncFlow</string>
    <string name="logo_description">SyncFlowLogo</string>
    <string name="company_code">Firma Kodu</string>
    <string name="company_code_example">örn: PIXEL-8921</string>
    <string name="corporate_email">Kurumsal E-Posta Adresi</string>
    <string name="email_example">ornek@ajans.com</string>
    <string name="password">Şifre</string>
    <string name="login">Giriş Yap</string>
    <string name="forgot_password">Şifremi unuttum</string>
    <string name="create_account">Hesap Oluştur</string>
    <string name="subheading">Çalışma Alanı Girişi</string>

    <string name="step_one">Adım 1: Kurulum Bilgileri</string>
    <string name="company_name">Firma/Ajans Adı</string>
    <string name="company_name_example">Örn: Pixel Reklam Ajansı</string>
    <string name="sector_name">Sektör</string>
    <string name="btn_register_stepOne">İleri: Yönetici Hesabı</string>

    <string name="step_two">Adım 2: Yönetici Hesabı</string>
    <string name="manager_name_surname_tv">Yönetici Adı Soyadı</string>
    <string name="company_email">Kurumsal E-Posta</string>

    <string name="password_atleast8">Şifre (En az 8 karakter)</string>
    <string name="password_again">Şifre Tekrar</string>
    <string name="next_departments">İleri</string>
    <string name="back">Geri</string>

    <string name="step_three"> Adım 3: Departman ve Ekipler</string>
    <string name="step_three_description"> Departmanları ve altındaki ekipleri ekleyin (Örn: Tasarım Ekibinin altında :Art Direction, Grafik Tasarım, Metin Yazarlığı).</string>
    <string name="department_placeholder">Örn: Tasarım Departmanı</string>
    <string name="add_new_team">Yeni Ekip Ekle</string>
    <string name="team_description">Örn: Grafik Tasarım</string>
    <string name="remove">sil</string>
    <string name="department_name">Departman Adı</string>
    <string name="add_new_department">Yeni Departman Ekle</string>
    <string name="teams_in_department">Bu Departmandaki Ekipler</string>


    <string name="sync">Sync</string>
    <string name="flow">Flow</string>
    <string name="splash_description">Çalışma alanın, tek akışta</string>
</resources>