<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="56dp"
            android:layout_height="63dp"
            android:src="@drawable/ic_logo"
            android:contentDescription="@string/logo_description" />

        <TextView
            android:id="@+id/txtSync"
            android:layout_marginStart="12dp"
            android:text="@string/sync"
            style="@style/SyncFlowUI.Splash.Text"
            android:textColor="@color/olive" />

        <TextView
            android:id="@+id/txtFlow"
            android:text="@string/flow"
            style="@style/SyncFlowUI.Splash.Text"
            android:textColor="@color/primary"/>
    </LinearLayout>

    <TextView
        android:id="@+id/txtTagline"
        android:layout_marginTop="12dp"
        style="@style/SyncFlowUI.Splash.Text"
        android:text="@string/splash_description"
        android:textColor="@color/dark_green"
        android:textSize="13sp" />
</LinearLayout>