<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".RegisterStepThreeFragment"
    android:fillViewport="true"
    android:background="@color/background">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:paddingHorizontal="24dp"
            android:paddingBottom="24dp"
            app:layout_constraintWidth_max="480dp"
            android:orientation="vertical">

            <!--Logo-->
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:src="@drawable/syncflow_title"
                android:scaleType="fitCenter"
                android:layout_marginBottom="40dp"
                android:contentDescription="@string/logo_description"/>

            <!--Adım 3-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/step_three"
                android:textStyle="bold"
                android:textSize="22sp"
                android:textColor="@color/light_grey"
                android:layout_gravity="center"/>

            <!--Adım 3 Açıklama-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/step_three_description"
                android:textSize="16sp"
                android:textColor="@color/olive"
                android:textStyle="bold"
                android:justificationMode="inter_character"
                android:layout_marginTop="8dp"/>

            <!--Bilgilerin yer Aldığı Kart-->

            <LinearLayout
                android:id="@+id/departmentContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:orientation="vertical" />

            <!--Yeni Departman Ekle Butonu-->
            <TextView
                android:id="@+id/tvAddDepartment"
                style="@style/SyncFlowUI.Button.DashedAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_new_department" />

            <!--Çizgiler-->
            <LinearLayout style="@style/StepIndicator.Container">

                <View style="@style/StepIndicator.Bar.Inactive" />
                <View style="@style/StepIndicator.Bar.Active" />
                <View
                    style="@style/StepIndicator.Bar.Inactive"
                    android:layout_marginEnd="0dp" />

            </LinearLayout>

            <!--Butonlar-->
            <LinearLayout
                android:id="@+id/buttonContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="30dp">

                <com.google.android.material.button.MaterialButton
                    style="@style/Button.Primary.Back"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginEnd="20dp"
                    android:text="@string/back" />

                <com.google.android.material.button.MaterialButton
                    style="@style/Button.Primary.Next"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/next_departments" />

            </LinearLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>