<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".RegisterFragment"
    android:fillViewport="true"
    android:background="@color/background">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/registerFragmentContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="24dp"
            android:paddingBottom="24dp"
            app:layout_constraintWidth_max="480dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.4">

            <!--Logo-->
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:scaleType="fitCenter"
                android:src="@drawable/syncflow_title"
                android:layout_marginBottom="40dp"
                android:contentDescription="@string/logo_description" />

            <!--Adım 1-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/step_one"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:textSize="22sp"
                android:textColor="@color/light_grey"/>

            <!--Firma Ajans Adı-->
            <TextView
                style="@style/SyncFlowUI.Label"
                android:text="@string/company_name"
                android:layout_marginTop="30dp"
                android:labelFor="@id/etCompanyName"/>

            <!--Firma Input-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/CompanyNameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:placeholderText="@string/company_name_example"
                style="@style/SyncFlowUI.TextInput">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etCompanyName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="50"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>


            <!--Sektör-->
            <TextView
                android:text="@string/sector_name"
                style="@style/SyncFlowUI.Label"
                android:labelFor="@id/etSector"/>

            <!--Sektör Input-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/sectorLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:placeholderText="Sektör Adını Giriniz"
                style="@style/SyncFlowUI.TextInput">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etSector"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>


            <!--Çizgiler-->
            <LinearLayout style="@style/StepIndicator.Container">

                <View style="@style/StepIndicator.Bar.Active" />
                <View style="@style/StepIndicator.Bar.Inactive" />
                <View
                    style="@style/StepIndicator.Bar.Inactive"
                    android:layout_marginEnd="0dp" />

            </LinearLayout>

            <!--Buton-->

            <com.google.android.material.button.MaterialButton
                style="@style/Button.Primary.Next"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="12dp"
                android:text="@string/btn_register_stepOne" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>



</ScrollView>